--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
+    "faker": "^5.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/faker": "^5.5.3",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "jest-expo": "~41.0.0",
