--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12"
   },
@@ -43,6 +44,7 @@
     "@types/faker": "^5.5.3",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "jest-expo": "~41.0.0",
     "typescript": "~4.0.0"
   },
