--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-swipe-list-view": "^3.2.7",
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12"
   },
